--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
-    "express": "^4.18.2",
-    "google-spreadsheet": "3.3.0"
+    "express": "^4.18.2"
   }
 }
