--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^7.5.2",
+    "approot": "^0.2.1",
     "body-parser": "^1.20.2",
     "crypto-js": "^4.1.1",
     "ejs": "^3.1.9",
